# ChangeLog for www-apps/nikola
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/nikola/ChangeLog,v 1.28 2015/06/17 04:47:02 yngwin Exp $

*nikola-7.5.1 (17 Jun 2015)

  17 Jun 2015; Ben de Groot <yngwin@gentoo.org> +nikola-7.5.1.ebuild,
  -nikola-7.3.0.ebuild, nikola-7.3.1.ebuild:
  Update deps in 7.3.1. Version bump to 7.5.1 (bug #551006).

  04 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add pypi to remote-id in metadata.xml

*nikola-7.3.1 (25 Mar 2015)

  25 Mar 2015; Ben de Groot <yngwin@gentoo.org> +nikola-7.3.1.ebuild:
  version bump

  06 Mar 2015; Pacho Ramos <pacho@gentoo.org> nikola-7.2.0.ebuild:
  amd64 stable, bug 540290

*nikola-7.3.0 (31 Jan 2015)

  31 Jan 2015; Ben de Groot <yngwin@gentoo.org> +nikola-7.3.0.ebuild,
  -nikola-6.4.0-r1.ebuild, -nikola-7.1.0.ebuild:
  version bump; remove old

  25 Nov 2014; Pacho Ramos <pacho@gentoo.org> nikola-7.2.0.ebuild:
  Support python 3.4

  24 Nov 2014; Tobias Klausmann <klausman@gentoo.org> nikola-7.1.0.ebuild,
  nikola-7.2.0.ebuild:
  Newer versions of Nikola handle configparser internally, obviating the use of
  d-p/configparser

*nikola-7.2.0 (03 Nov 2014)

  03 Nov 2014; Ben de Groot <yngwin@gentoo.org> +nikola-7.2.0.ebuild:
  version bump

*nikola-6.4.0-r1 (30 Sep 2014)
*nikola-7.1.0 (30 Sep 2014)

  30 Sep 2014; Ben de Groot <yngwin@gentoo.org> +nikola-6.4.0-r1.ebuild,
  +nikola-7.1.0.ebuild, -nikola-6.4.0.ebuild:
  Add python3 support (bug #505642), update dependency requirements. Add ebuild
  for 7.1.0 (bug #512242), but this still needs some dependencies to be version-
  bumped.

  29 Sep 2014; Tobias Klausmann <klausman@gentoo.org> nikola-6.4.0.ebuild:
  Loosen overly-specific configparser dep. dev-python/configparser-3.2.0.3
  breaks llvm compilation so let's try to get rid of it

  21 Mar 2014; Ben de Groot <yngwin@gentoo.org> -nikola-6.2.1.ebuild,
  -nikola-6.3.0.ebuild:
  remove old

*nikola-6.4.0 (21 Mar 2014)
