@@ -1,30 +1,33 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST a-study-in-scarlet.txt 122496 SHA256 633115482b8b6cca24332133f22ed3caa1b4b58361b604dbe26aaa943b7cb4ad SHA512 7958079a745ce6474b9006454ee99d9c848bc36372fc149265b4f2b82e562c961823b7716ec0e3285fce1e9363cf8e109190d6f0dc998801c568764ac82f8d19 WHIRLPOOL 0b03b0c6c89f9e23745e8cd1fb8f9faba3b382fc06d3481cfc72e50d386937d97452889a49ef9d298915431ecb5920b1374f1e7585aefd8fe893f13a69f66a9d
 DIST nikola-7.2.0.tar.gz 1843614 SHA256 05bf72f9894eaf83a61ebc1386ab61ffa1be1e4934265261e58487b371f8a926 SHA512 87a6f543793bc21453dc01b4662703edbfd887b775ea067a79bfcf0ac74e22e3034657ce24bdbaca5a05585a6e556295b6d5670ae085f8b31a057cf77d72d3eb WHIRLPOOL ad9794f705307393050727467ae8f4908e0e08134d78aebf9ff3aa0c12f35d2a6bffa7d8453a7c0ce1ba21b6591b3dcc493a0a52b5dd27971d67174ef24dbef6
 DIST nikola-7.3.1.tar.gz 2030543 SHA256 33c11ca186cd10b42ff9b2221cec56226d8bab4d14a0ac7c5c01edb57328bdd2 SHA512 a5c243cb8fdc3f9213979ea6a4213a9e89bdedc02ea382ca967e9a1175a99838488fb2f166e6b130726357bddb5c52ff863231321d95716e51a6ab6636378995 WHIRLPOOL 2b2f6093a0cb090f61fe08aea72ec3244bc96c4a6c9891fbf0b305b2da9f8022bdea1c6ee18b9804bbc2127e28593b3e95449f984a4ca488dd71a3da6edba7f7
 DIST nikola-7.5.1.tar.gz 2443370 SHA256 0ae2a179800051b871b06efe519345bb401f69d27630caf2a710901e305fd432 SHA512 f94e585b5a5d8a9a964eeca8ecb2a797b83d7fa4faa24f370812000601273a19a361677d7ab7b1ab244d76648dbcb65c17e53f3db52dfeb4bc6519567a585bab WHIRLPOOL aba22fca8e59907cceab0105e2cdd8bcae865b401c502eb8b17a44ff603e1b9ff5503ad9d5d97c74baaefbb1a707e97c1e87675fc3083970860dd26a6ccf4980
+DIST nikola-7.6.0.tar.gz 2457863 SHA256 b68d4f6511d5b1c38c9ab9030dd51ceb4a7357a08d5cb852f7e3a7503b9ddc36 SHA512 b13d9f733eb4e67bfa237788b67f01cb114c25ea064c44fa12c84e2dee2ddb25d0cac1b105b66cc8a42cf55f514a9567a1e62be8cdac72bd982dccc5c4ae4fff WHIRLPOOL c359faef51b50faa3cb12a7662c8e9a277a067c92183674cf10a715bf5a4ed6ee039d174be3567d1404588d5ef3fe449829b91287003182220d8dc3fc685e2bd
 EBUILD nikola-7.2.0.ebuild 2354 SHA256 162456d107e5cd535ea64f848aff6b2ac0f9930bd275a39a260d897a1c314a26 SHA512 25abddd83ad8d16373d0b567d20cfd2f1c3cdd9a040db53599d29bfcbb5ee2f6ec8675c0a81af6af3f040bd6488006688395c4829fd9ff492d1f8bea057b5b32 WHIRLPOOL cff5cea3da3c35bcc5910f419451a91d43861eeac2a4f03af7db81527163da19a1d9eea7f875ed5a4472e281868949377d9e004dc976c537e1da70876d413879
 EBUILD nikola-7.3.1.ebuild 2315 SHA256 24ae4e0f3134e59aa974446ae2fffd94c02b01901c23efb8fbae290fa01fdc0d SHA512 a4287c6f35b88e5c91555ec2c69b781f085a879829283017ae2abb6779bd5222cfb95a9f9f4b1e12e75091ad1de809d9600a9db84ae1bb83df8e45f95e5e8f9d WHIRLPOOL bbb0eb821bef7cdcca1f843ec57658ffcc31976be06264b675b408bbd6f8badb816ba6a2725675f749696106ed77062676564d1e93e4b869664baf9b486b428b
 EBUILD nikola-7.5.1.ebuild 2315 SHA256 4a3c44c57d040cac9c4a0c2142f6dc639890d0721ab905c9f42ecc4dd804de72 SHA512 d54423ea3751403a31f612c40e531de9a0dee7e1162db7c965874f2831208004884b8cb9238113659e02f047179e36f9fa0db938b28daceeba4e14bfe07d592b WHIRLPOOL 8cd768517634e69b3d3c13f9cd9188c2c1e978dac04f2ee5141c8c6df3a290d89b3ca928eb50b29acbdf70087205cbe39e952087caef23c4455d9a9445205342
-MISC ChangeLog 4147 SHA256 1510933e41bb38bcb4e08394eeb08e0082e276a0a924008276bfc0d06ed6b664 SHA512 d2722cc1fa3f11147007aa2844eccf2b416b263968b7d5831a13af2a03a554dbf86e21b8acccde69e829f8224ef9e0fc3032f2c7505d9730b3f4bd9e51c05300 WHIRLPOOL 7b36caaa1a4e7a8003144d17fc26eae16c00b9c58c5c0659a3cec6f885c9f716a7bc8a365d58720fd910c8430f25530320700dd0748ddb527e3e85df35849d57
-MISC metadata.xml 1016 SHA256 31c9648c4156d1f321e3f89bc456bc65970426037cf3f7257f24909a02323e57 SHA512 e6321f194284d17b506e97363c3b103caaedc6d5205cafb5eaa6d5987490931d1148f3e342af6dc2196f700137b6042c977a6168b4103a94537b0cd06b09910a WHIRLPOOL 8078357d17a46303b25ca8ee4ddc5f1a7f395cef3424bc53a1c634a3669b3780a73a7cec8053ebe3afb8ff64f6d71972078906b5c30fa06e465279e87ad1b631
+EBUILD nikola-7.6.0.ebuild 2738 SHA256 90b3a3da7bf414f0dbbb3d2984dbd04d4bdf4e78fc9500e9500bb11d868432dd SHA512 35d58fcefe64e2956f24f21a9e28fee43f50fbff8cb09c851678c7142050bc96f2a5f126fa6c2926eb9c4c031a9f820fd98a9dfc3de2b06ffcd0cf4fb91b358b WHIRLPOOL 8dcbea0b1deee71db10ea184b40888847f1dd0816f3cafa8b4d3b55fb6cc9b792ae118d6e6881dab6157d9188528257019ebf6cdc10fe4b8363efb28956e0b17
+MISC ChangeLog 4315 SHA256 30f6e8afdb4369dbce1a64781c0d684cf308305bc987a42b66cb9350b5e99897 SHA512 67202143c2a76279f18be55497b7b5a238dfd3f3e112dd3d31fb92a901fb8872672d3ec1f4321f574c90ae62c08031c026ad4dad2971ff2c67a451a4bae8789b WHIRLPOOL 6d6ff021965a6fce918bfa154aa1aba5d32a8b5152e0dbcaa834a8e67611f8545cd2b8d13801a7e4f595569434bd58b4a10fd00cb683e5d0051c6dcd895f18c5
+MISC metadata.xml 1500 SHA256 cca1de3fec7622fcc99ffcfcfdccca0010ebd08db3bc80f1beb12226b5c33cd9 SHA512 4b5136e5b9bc7819697ef111a532636dbbe53abda080218ec39eb5b0aae459b235d69608fec26a5002e6a0cf45d97a008655f62ff2dcd66292aae3e873188366 WHIRLPOOL c7832bc86f0557a14addc57ab51c9e9cd2e660be57251f7a1b07dc1bf81a2560803b98ddee8010bc1f8169116243834f90d60e695a497ba2b29d034e0a1ac973
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.1
 
-iQJ8BAEBCABmBQJVgPvJXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVnRXeXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
-RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFORn0P/3Aa5vtUcVYJ+MvfErcVVZ3O
-/ZTfeB862fnZAOOo9mKURxnD7LBOqZh5eZmL93SVX8Mi5K4MdRL+rhl62q/zcDud
-wVL5X2K/YLuKAKcqlU/bRve+eP6HhTcapnzF7Ri90sOSatKlYr+pQqJhorr1Y5YH
-DcCJs2nil0xqiFG4uj/nIOLFFxjVmZJO5KVTXFvjg8kv9qghK+ciFDlHVV4tILzU
-V4Go85at4qc++69PKoDRQEcA5njEjP8vcw1j0QQ693DPbFijC+R+OUQBEykvdW9O
-FcsjHXFblyj3UWV1Pt5ZMpkEzkwujVAgOHp03gQaJ3JjZluygbVY0EkPlZwpjgP+
-tyMhOQpnn3KI3ib7LHGIAFb0nQiz2su29wlDgWP1S8CZ/0hBpDCgPyEn+VDtT1zu
-eKFDiKJstnHcn0n8QaSAEMP+XxXWs/I15gJhPfxbKgIM11GKMxpCaZ05fNgvbgUG
-JppDVdBJKbfx8m2fHYo+2cnu4js9mAAQHcrEj0njVtNjbuvdOAo3up1cPhjG7iA7
-SV49KLdt8AcIe+0u9/38km1ckJ1BDq7oQ/FhcfFHtSfAM84Xim1m/BEQkQnfweCQ
-QSLKYgdr7FXsWhmzYsbbCDaXKycT6eP46SjaSbTlXWMiIyy3DNLnY2PHv0JP9ZAG
-A4KY1ouUG1m+9L9WHaa9
-=fntP
+RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOpioP/3yubNQoD9keY8CP8Wc+fn4B
+8DBlZWn8Fcd38w4U8E+wVNQZFNsCOku2tsTqdUKBD8YwEV1YyRNRNfFCdcXbaT/I
+ZvZcqxyUACK/zfF4PC2BJ+yBfETZcc4e8Qj9YIe4fp8HKP6cUPGWM9hNMpqMBDh+
+2MZ+g1ToYdF2UftSq8F53OWqCxCKl+JRxkNwXBPH/4sqwUUWCUv7T3Vaw113553a
+GM6RwYURdkXcBBnqG2uRUyJ3rQWQmUERNSn6iIa6vpPix8OVGbBfJw8rsMI4QFyK
+sdcJpmrkADwXQ2hQJXbDtyjMbofVSSXH0oXCuxdSzHbNZAji3Cx6Y4PKA7xIKCnU
+TDb3XM7iTExnr6h6l+AMwjjFGEiuMMmV4I3vXLm5impDhAh5h/C9+gxIF5gNINc5
+QsMJ0SPmeScDmqtmN19ZYpJTOmRgoaDrHfcXLDbffVOVQvURxStG77TUCKaBADoX
+pUij9j2sfBHy7j4O0gmit+Loe/w/yvsQNr4uYroOC6olRdJyct4RAcwBWJR/J/2t
+8MLVzwa0/uuSZZddlKPLapa1ywWSDpKqkG1/cLJK42qmSbXFI/OXGtqdYp/TTmf3
+Kxnzw7IasbLnC+dcDIn1b1/Lcip96+0+qxCz5BEMvSAj7SLMdY/SEkGY7W/8E8BH
+QHDAOO2sOvxrpXkybKhP
+=sWvv
 -----END PGP SIGNATURE-----
