@@ -13,6 +13,10 @@
     <flag name="charts">
       Support chart generation through <pkg>dev-python/pygal</pkg>
     </flag>
+    <flag name="ghpages">
+      Add support for direct uploading to github pages thru
+      <pkg>dev-python/ghp-import</pkg>
+    </flag>
     <flag name="hyphenation">
       Add hyphenation support through <pkg>dev-python/pyphen</pkg>
     </flag>
@@ -21,10 +25,21 @@
     </flag>
     <flag name="jinja">
       Add support for <pkg>dev-python/jinja</pkg> as alternative templating
-	  engine to Mako
+      engine to Mako
     </flag>
     <flag name="markdown">
-      Add support for Markdown as alternative markup language to reStructuredText
+      Add support for Markdown as alternative markup language to
+      reStructuredText
+    </flag>
+    <flag name="watchdog">
+      Use <pkg>dev-python/watchdog</pkg> to monitor file system events
+    </flag>
+    <flag name="webmedia">
+      Use <pkg>dev-python/micawber</pkg> to extract metadata from web media
+      links
+    </flag>
+    <flag name="websocket">
+      Add websocket support thru <pkg>dev-python/ws4py</pkg>
     </flag>
   </use>
   <upstream>
